# DSBACPNN

./: .gitignore  .gitmodules  ActivationFunctions.h  ActivationFunctions_impl.cpp  AnyActivationFunction.h  AnyMovable.h  BlackBox.h  BlackBox_impl.cpp  CMakeLists.txt  generate_theta.cpp  main.cpp  settings.txt  theta.txt
